--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -2,3 +2,10 @@ h1{
     font-weight: bold;
     font-size: 40px;
 }
+.xyz{
+    min-height: 80vh;
+    display: flex;
+    justify-content: center;
+    
+    align-items: center;
+}
