--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,50 +1,61 @@
-<div class="d-flex justify-content-center aligh-items-center">
-  <form
-    #loginForm="ngForm"
-    class="border bg-light text-center"
-    (ngSubmit)="verifyLogin(loginForm.value)"
-  >
-    <h2 class="text-center">Login</h2>
-    <div>
-      <input
-        required
-        #name="ngModel"
-        name="email"
-        ngModel
-        type="email"
-        class="form-control mt-4 w-75 text-center"
-        placeholder="Enter email"
-      />
-      <span *ngIf="name.invalid && name.touched" class="text-danger"
-        >Please provide email</span
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <div class="col-xl-6 col-md-6 col-sm-12 wid">
+      <form
+        #loginForm="ngForm"
+        class="p-4 bg-light "
+        (ngSubmit)="verifyLogin(loginForm.value)"
       >
+        <h2 class="text-center">Login</h2>
+        <div class="w-100 mx-auto">
+          <div class="px-5 w-100 m-0 ">
+            <label for="email">Email</label>
+            <input
+              required
+              #name="ngModel"
+              name="email"
+              ngModel
+              type="email"
+              class="form-control"
+              placeholder="Enter email"
+            />
+            <span *ngIf="name.invalid && name.touched" class="text-danger"
+              >Please provide email</span
+            >
+          </div>
+          <div class="px-5 w-100 py-3 m-0">
+            <label for="password">Password</label>
+            <input
+              required
+              #password="ngModel"
+              minlength="3"
+              name="password"
+              ngModel
+              type="text"
+              class="form-control"
+              placeholder="Enter password"
+              required
+            />
+            <span
+              *ngIf="password.invalid && password.touched"
+              class="text-danger"
+              >Please provide password</span
+            >
+          </div>
+        </div>
+
+        <div class="text-center">
+          <button
+            type="submit"
+            class="btn p-3 btn-primary text-black"
+            [disabled]="loginForm.invalid"
+          >
+            Submit
+          </button>
+        </div>
+      </form>
     </div>
-    <div>
-      <input
-        required
-        #password="ngModel"
-        minlength="3"
-        name="password"
-        ngModel
-        type="text"
-        class="form-control mt-4 w-75 text-center"
-        placeholder="Enter password"
-        required
-      />
-      <span *ngIf="password.invalid && password.touched" class="text-danger"
-        >Please provide password</span
-      >
-    </div>
-    <div>
-      <button
-        type="submit"
-        class="btn btn-primary text-black"
-        [disabled]="loginForm.invalid"
-      >
-        Submit
-      </button>
-    </div>
-  </form>
+  </div>
 </div>
 
 <!-- (click)="storeLoginInfo(loginForm.value)" -->
